# Hashfunctions

./: .gitignore  CMakeLists.txt  CMakeListsSettings_lh80370.txt  README.md
src/GUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Hashfunctions/: CMakeLists.txt  hashfunction.cpp  hashfunction.h
